--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/layout.css">
     <link rel="stylesheet" href="static/css/styles.css">
-    <title>Document</title>
+    <title>Matching Game</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
     </div> -->
     <section class="gameControl">
         <button id="loadBtn" class="customBtn">Start</button>
-        <button id="changeBtn" class="customBtn">Change</button>
         <button id="backBtn" class="customBtn">Back</button>
     </section>
     <section class="categories">
